force-app/main/default/objects/Location__c/Location__c.object-meta.xml
<CustomObject>
    <description>Location stores all the Master Data related to the reservations. It can hold building, suite, room and bed separated by record types.</description>
    <label>Location</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>