force-app/main/default/objects/Location__c/fields/Bed_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Bed_Attributes__c</fullName>
    <label>Attributes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type - Single Bed</fullName>
            </value>
            <value>
                <fullName>Type - Double Bed</fullName>
            </value>
            <value>
                <fullName>View - Lake View</fullName>
            </value>
            <value>
                <fullName>View - Mountain View</fullName>
            </value>
            <value>
                <fullName>View - Riverside View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>