force-app/main/default/objects/Location__c/fields/BedToRoom__c.field-meta.xml
<CustomField>
    <fullName>BedToRoom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Room</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Beds</relationshipLabel>
    <relationshipName>Beds_per_room</relationshipName>
    <type>Lookup</type>
</CustomField>