force-app/main/default/objects/Location__c/fields/BedtoSuite__c.field-meta.xml
<CustomField>
    <fullName>BedtoSuite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suite</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Suite</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Beds</relationshipLabel>
    <relationshipName>Beds_per_suite</relationshipName>
    <type>Lookup</type>
</CustomField>