force-app/main/default/objects/Location__c/fields/Common_Floor__c.field-meta.xml
<CustomField>
    <fullName>Common_Floor__c</fullName>
    <label>Floor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ground Floor</fullName>
            </value>
            <value>
                <fullName>First Floor</fullName>
            </value>
            <value>
                <fullName>Second Floor</fullName>
            </value>
            <value>
                <fullName>Third Floor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>