force-app/main/default/objects/Location__c/fields/Common_Gender__c.field-meta.xml
<CustomField>
    <fullName>Common_Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Non-Specific</fullName>
                <default>true</default>
                <label>Non-Specific</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>