force-app/main/default/objects/Location__c/fields/Out_of_order__c.field-meta.xml
<CustomField>
    <fullName>Out_of_order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out of order</label>
    <type>Checkbox</type>
</CustomField>