force-app/main/default/objects/Location__c/fields/Out_of_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Order_Date__c</fullName>
    <label>Out of Order Date</label>
    <type>Date</type>
</CustomField>