force-app/main/default/objects/Location__c/fields/Out_of_Order_Reason__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Order_Reason__c</fullName>
    <label>Out of Order Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>