force-app/main/default/objects/Location__c/fields/Program1__c.field-meta.xml
<CustomField>
    <fullName>Program1__c</fullName>
    <label>Program</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>