force-app/main/default/objects/Location__c/fields/Room_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Room_Attributes__c</fullName>
    <label>Attributes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Occupancy - Single</fullName>
            </value>
            <value>
                <fullName>Occupancy - Double</fullName>
            </value>
            <value>
                <fullName>Type - Balcony</fullName>
            </value>
            <value>
                <fullName>Type - Private</fullName>
            </value>
            <value>
                <fullName>Type - Semi Private</fullName>
            </value>
            <value>
                <fullName>View - Lake View</fullName>
            </value>
            <value>
                <fullName>View - Mountain View</fullName>
            </value>
            <value>
                <fullName>View - Riverside View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>