force-app/main/default/objects/Location__c/fields/Room_Category__c.field-meta.xml
<CustomField>
    <fullName>Room_Category__c</fullName>
    <label>Room Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Room</fullName>
                <default>true</default>
                <label>General Room</label>
            </value>
            <value>
                <fullName>Business Room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>