force-app/main/default/objects/Location__c/recordTypes/Bed.recordType-meta.xml
<RecordType>
    <fullName>Bed</fullName>
    <active>true</active>
    <label>Bed</label>
    
</RecordType>