force-app/main/default/objects/Location__c/recordTypes/Business_Room.recordType-meta.xml
<RecordType>
    <fullName>Business_Room</fullName>
    <active>true</active>
    <description>Used to store business rooms in a facility</description>
    <label>Business Room</label>
</RecordType>