force-app/main/default/objects/Location__c/recordTypes/Suite.recordType-meta.xml
<RecordType>
    <fullName>Suite</fullName>
    <active>true</active>
    <label>Suite</label>
   
</RecordType>