force-app/main/default/objects/Location__c/validationRules/Lookup_Fields_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Lookup_Fields_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.Name = &quot;Bed&quot;,
    OR(
        AND(
            NOT(ISBLANK(BedToRoom__c)),
            NOT(ISBLANK(BedtoSuite__c))
        ),
        AND(
            ISBLANK(BedToRoom__c),
            ISBLANK(BedtoSuite__c)
        )
    )
)</errorConditionFormula>
    <errorMessage>Please ensure that either the Suite or Room field has a value, but not both. Both fields cannot be empty.</errorMessage>
</ValidationRule>