force-app/main/default/objects/Location__c/validationRules/Lookup_Fields_Validation_for_Room_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Lookup_Fields_Validation_for_Room_Record</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name = &quot;Room&quot;,
OR(
AND(
NOT(ISBLANK(RoomtoSuite__c)),
NOT(ISBLANK(Room__c))
),
AND(
ISBLANK(RoomtoSuite__c),
ISBLANK(Room__c)
)
)
)</errorConditionFormula>
    <errorMessage>Please ensure that either the Building or Suite field has a value, but not both. Both fields cannot be empty.</errorMessage>
</ValidationRule>