force-app/main/default/objects/Location__c/validationRules/Out_of_Order_Date_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Out_of_Order_Date_Validation_Rule</fullName>
    <active>true</active>
    <description>This validation rule ensures that the &quot;Out of Order Date&quot; field remains empty when the &quot;Out of Order&quot; checkbox is unchecked. It prevents users from entering a value in the &quot;Out of Order Date&quot; field when the corresponding checkbox is not selected.</description>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Status__c, &quot;Out of Order&quot;)),
NOT(ISBLANK(Out_of_Order_Date__c))
)</errorConditionFormula>
    <errorMessage>The &apos;Out of Order Date&apos; field should be empty unless the &apos;Status&apos; field is set to &apos;Out of Order&apos;.&quot;</errorMessage>
</ValidationRule>