force-app/main/default/objects/Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Room__c</columns>
    <columns>BedToRoom__c</columns>
    <columns>BedtoSuite__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>