force-app/main/default/objects/Location__c/listViews/Beds.listView-meta.xml
<ListView>
    <fullName>Beds</fullName>
    <columns>NAME</columns>
    <columns>Building__c</columns>
    <columns>BedtoSuite__c</columns>
    <columns>BedToRoom__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Location__c.Bed</value>
    </filters>
    <label>Beds</label>
</ListView>