force-app/main/default/objects/Location__c/listViews/Buildings.listView-meta.xml
<ListView>
    <fullName>Buildings</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Location__c.Building</value>
    </filters>
    <label>Buildings</label>
</ListView>