force-app/main/default/objects/Location__c/listViews/Rooms.listView-meta.xml
<ListView>
    <fullName>Rooms</fullName>
    <columns>NAME</columns>
    <columns>Room__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Location__c.Room</value>
    </filters>
    <label>Rooms</label>
</ListView>