force-app/main/default/objects/Location__c/listViews/Suites.listView-meta.xml
<ListView>
    <fullName>Suites</fullName>
    <columns>NAME</columns>
    <columns>Suite__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Location__c.Suite</value>
    </filters>
    <label>Suites</label>
</ListView>